--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:background="@drawable/fondo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -12,54 +13,16 @@
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
+
         <TextView
             android:id="@+id/solucion"
-            android:background="#1000"
-            android:text="0"
-            android:textSize="24sp"
-            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="50dp"
-            android:layout_width="match_parent"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_margin="20dp"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-
-        <Button
-            android:id="@+id/num_siete"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="7"
-            android:textSize="24sp"/>
-        <Button
-            android:id="@+id/num_siete"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="7"
-            android:textSize="24sp"/>
-        <Button
-            android:id="@+id/num_siete"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="7"
-            android:textSize="24sp"/>
-        <Button
-            android:id="@+id/num_siete"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:text="X"
-            android:textSize="24sp"/>
+            android:layout_gravity="center"
+            android:background="#00C853"
+            android:text="0"
+            android:textSize="30sp" />
 
     </LinearLayout>
     <LinearLayout
@@ -67,37 +30,91 @@
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
+
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_siete"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#e1ff4000"
+            android:text="7"
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_ocho"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#e1ff4000"
+            android:text="8"
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_nueve"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#e1ff4000"
+            android:text="9"
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/multiplicacion"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="*"
+            android:textSize="24sp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_margin="20dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
         android:orientation="horizontal"
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
 
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_cuatro"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:backgroundTint="#e1ff4000"
+            android:text="4"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_cinco"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:backgroundTint="#e1ff4000"
+            android:text="5"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_seis"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:backgroundTint="#e1ff4000"
+            android:text="6"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/division"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -117,31 +134,88 @@
         android:layout_width="match_parent">
 
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_uno"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="#e1ff4000"
+            android:text="1"
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_dos"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:backgroundTint="#e1ff4000"
+            android:text="2"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_tres"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:backgroundTint="#e1ff4000"
+            android:text="3"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/resta"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="7"
+            android:text="-"
+            android:textSize="24sp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_margin="20dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+        android:orientation="horizontal"
+        android:layout_margin="20dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/limpiar"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#D50000"
+            android:text="CE"
             android:textSize="24sp"/>
         <Button
-            android:id="@+id/num_siete"
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/num_cero"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="#e1ff4000"
+            android:text="0"
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/igual"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="="
+            android:textSize="24sp"/>
+        <Button
+            android:background="@drawable/boton_redondo"
+            android:id="@+id/suma"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -149,36 +223,5 @@
             android:text="+"
             android:textSize="24sp"/>
     </LinearLayout>
-    <Button
-        android:id="@+id/num_siete"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:text="7"
-        android:textSize="24sp"/>
-    <Button
-        android:id="@+id/num_siete"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:text="7"
-        android:textSize="24sp"/>
-    <Button
-        android:id="@+id/num_siete"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:text="7"
-        android:textSize="24sp"/>
-    <Button
-        android:id="@+id/num_siete"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:textSize="24sp"/>
 
 </LinearLayout>
